--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: GitHub Pages Test Site
 email: brettnstewart@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Github Pages test site.
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "pages" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
@@ -30,7 +30,7 @@ plugins:
   - jekyll-paginate
 
 # Pagination
-paginate: 5
+paginate: 2
 paginate_path: "/blog/:num/"
 
 # Exclude from processing.
