--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ markdown: kramdown
 theme: minima
 plugins:
   - jekyll-feed
-  - jekyll-paginate
+#  - jekyll-paginate
 
 # Pagination
 paginate: 2
